# rust-raytracer

./: .gitignore  Cargo.toml  README.md  TODO
back/: color.rs  tuple.rs
src/: camera.rs  color.rs  lib.rs  light.rs  material.rs  matrix.rs  object.rs  ray.rs  tuple.rs  world.rs
