[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["zyarcher <zyarcher@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
rayon = "*"
num-traits = "*"
quickcheck = "*"

[[bin]]
name = "clock"
path = "src/bin/clock.rs"

[[bin]]
name = "projectile"
path = "src/bin/projectile.rs"

[[bin]]
name = "sphere"
path = "src/bin/sphere.rs"

[[bin]]
name = "sphere_scene"
path = "src/bin/sphere_scene.rs"
